file sharing redisgned to force download

--- a/.htaccess
+++ b/.htaccess
@@ -14,4 +14,5 @@ RewriteRule ^go.html$  short.php [L]
 RewriteRule ^mynotes.html$ mnotes.php [L]
 RewriteRule ^([a-z0-9]*)$   index.php?id=$1 [L]
 RewriteRule ^go/([a-z0-9]+)$  shorturl.php?id=$1 [L]
+RewriteRule ^file/([a-z0-9]+)$  downloader.php?id=$1 [L]
 
