--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,7 @@ RewriteRule ^([a-z0-9]*)$   index.php?id=$1 [L]
 RewriteRule ^go/([a-z0-9]+)$  urlredirector.php?id=$1 [L]
 RewriteRule ^file/([a-z0-9]+)$  downloader.php?id=$1 [L]
 
+php_value upload_max_filesize 10M
+php_value post_max_size 11M
+php_value max_input_time 300
+php_value max_execution_time 300
