--- a/.htaccess
+++ b/.htaccess
@@ -68,3 +68,4 @@ php_value upload_max_filesize 10M
 php_value post_max_size 11M
 php_value max_input_time 300
 php_value max_execution_time 300
+php_value max_file_uploads 500
